finished assignment week 1 day 5

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/woodville2/node-review/issues"
   },
-  "homepage": "https://github.com/woodville2/node-review#readme"
+  "homepage": "https://github.com/woodville2/node-review#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
